CREATE TABLE IF NOT EXISTS users (
  id INT AUTO_INCREMENT PRIMARY KEY,
  name VARCHAR(100) NOT NULL,
  email VARCHAR(150) UNIQUE NOT NULL,
  password_hash VARCHAR(255) NOT NULL,
  role ENUM('student','faculty','admin') NOT NULL
);

CREATE TABLE IF NOT EXISTS rooms (
  id INT AUTO_INCREMENT PRIMARY KEY,
  room_name VARCHAR(100) NOT NULL,
  capacity INT NOT NULL,
  room_type VARCHAR(50) NOT NULL,
  location VARCHAR(150) NOT NULL
);

CREATE TABLE IF NOT EXISTS timeslots (
  id INT AUTO_INCREMENT PRIMARY KEY,
  slot_date DATE NOT NULL,
  start_time TIME NOT NULL,
  end_time TIME NOT NULL
);

CREATE TABLE IF NOT EXISTS reservations (
  id INT AUTO_INCREMENT PRIMARY KEY,
  user_id INT NOT NULL,
  room_id INT NOT NULL,
  slot_id INT NOT NULL,
  purpose VARCHAR(255),
  status ENUM('pending','approved','rejected','cancelled') DEFAULT 'pending',
  created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
  FOREIGN KEY (user_id) REFERENCES users(id),
  FOREIGN KEY (room_id) REFERENCES rooms(id),
  FOREIGN KEY (slot_id) REFERENCES timeslots(id)
);

CREATE TABLE IF NOT EXISTS approvals (
  id INT AUTO_INCREMENT PRIMARY KEY,
  reservation_id INT NOT NULL,
  admin_id INT NOT NULL,
  decision ENUM('approved','rejected') NOT NULL,
  decision_time DATETIME DEFAULT CURRENT_TIMESTAMP,
  notes VARCHAR(255),
  FOREIGN KEY (reservation_id) REFERENCES reservations(id),
  FOREIGN KEY (admin_id) REFERENCES users(id)
);

-- Seed Data

-- Users (Password is 'password' hashed with scrypt/pbkdf2 default in werkzeug, but for seed we use a placeholder or handle in app)
-- Ideally we insert users via the app to get correct hashes. 
-- For this seed, we will assume a known hash or just insert placeholders.
-- Let's insert some dummy data. Note: Passwords here are NOT valid hashes for werkzeug unless generated by it.
-- We will rely on the app to create the first admin or use a script.
-- But to satisfy "Include sample seed data", here is some:

INSERT IGNORE INTO rooms (room_name, capacity, room_type, location) VALUES
('Lecture Hall A', 100, 'Lecture Hall', 'Building 1, Floor 1'),
('Lab 101', 30, 'Computer Lab', 'Building 2, Floor 1'),
('Conf Room B', 12, 'Conference Room', 'Building 1, Floor 2');

INSERT IGNORE INTO timeslots (slot_date, start_time, end_time) VALUES
('2023-12-01', '09:00:00', '10:00:00'),
('2023-12-01', '10:00:00', '11:00:00'),
('2023-12-01', '11:00:00', '12:00:00');
